// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing FormScreen core component should render correctly 1`] = `
"<section>
  <h2 className=\\"screen-title grey-text text-darken-3\\">
    New form screen test
  </h2>
  <CardPanel className=\\"s12 div-card-container\\" cardClassName=\\"card-container\\">
    <div className=\\"row\\" style={{...}}>
      <form className=\\"col s12 screen-form\\" style={{...}}>
        <h2>
          testing
        </h2>
      </form>
      <div className=\\"col s12\\" style={{...}}>
        <div className=\\"row buttons-row\\">
          <a className=\\"modal-trigger\\" href={[undefined]} onClick={[Function: handleSave]}>
            <Button title=\\"Save\\" className=\\"bold-text\\" color=\\"teal accent-4\\" icon={{...}} />
          </a>
          <a className=\\"modal-trigger\\" href=\\"#confirm-discard-modal\\" style={{...}}>
            <Button title=\\"Discard\\" className=\\"bold-text\\" color=\\"red accent-2\\" icon={{...}} />
          </a>
        </div>
      </div>
    </div>
  </CardPanel>
  <ConfirmActionModal id=\\"confirm-save-modal\\" title=\\"Are you sure you want to save changes?\\" onConfirm={[Function: handleSave]} />
  <ConfirmActionModal id=\\"confirm-discard-modal\\" title=\\"Are you sure you want to discard changes?\\" onConfirm={[Function: handleDiscard]} />
</section>"
`;

exports[`Testing FormScreen core component should render correctly 2`] = `
"<section>
  <h2 className=\\"screen-title grey-text text-darken-3\\">
    Edit testing
  </h2>
  <CardPanel className=\\"s12 div-card-container\\" cardClassName=\\"card-container\\">
    <div className=\\"row\\" style={{...}}>
      <form className=\\"col s12 screen-form\\" style={{...}}>
        <div className=\\"col s12 no-padding\\">
          <TextInput value=\\"#1818\\" className=\\"col s4 no-padding\\" inputClassName=\\"bold-text grey-text text-darken-2\\" disabled={true} />
        </div>
        <h2>
          testing
        </h2>
      </form>
      <div className=\\"col s12\\" style={{...}}>
        <div className=\\"row buttons-row\\">
          <a className=\\"modal-trigger\\" href=\\"#confirm-save-modal\\" onClick={false}>
            <Button title=\\"Save\\" className=\\"bold-text\\" color=\\"teal accent-4\\" icon={{...}} />
          </a>
          <a className=\\"modal-trigger\\" href=\\"#confirm-discard-modal\\" style={{...}}>
            <Button title=\\"Discard\\" className=\\"bold-text\\" color=\\"red accent-2\\" icon={{...}} />
          </a>
        </div>
      </div>
    </div>
  </CardPanel>
  <ConfirmActionModal id=\\"confirm-save-modal\\" title=\\"Are you sure you want to save changes?\\" onConfirm={[Function: handleSave]} />
  <ConfirmActionModal id=\\"confirm-discard-modal\\" title=\\"Are you sure you want to discard changes?\\" onConfirm={[Function: handleDiscard]} />
</section>"
`;
